# sentinel

./: .gitignore  CLAUDE.md  README.md  REVIEW_SPRINTS.md
.claude/: architecture-review.md  dns-reliability-progression.md  edge-case-review.md  edge-cases-audit.md
.claude/agents/: ring-tunnel.md
docs/: architecture.md  backend.md  cross-platform-bindings.md  data-storage.md  design-elements.md  ech-fallback.md  full-vpn-tcp-relay.md  implementation-phases.md  local-packet-engine.md  mvp-challenge.md  mvp-features.md  mvp-final.md  orchestration.md  production-vpn-patterns.md  project-structure.md  rust-engine-internals.md  rust_scanner.md  security-resources.md  system-integration.md  tech-stack.md  vpn-engineering-guide.md
proto/: ring.proto
research/: sentinel-mvp-features.md
ring/PacketTunnelExtension/: Info.plist  PacketTunnelExtension.entitlements  PacketTunnelProvider.swift  PrivacyInfo.xcprivacy  RustBridge.swift
ring/RingWidgets/: RingWidgetsBundle.swift  RingWidgetsLiveActivity.swift
ring/Shared/: AppGroupConfig.swift
ring/ring/: Theme.swift  ringApp.swift
ring/ring.xcodeproj/: project.pbxproj
ring/ringTests/: ringTests.swift
ring/ringUITests/: ringUITestsLaunchTests.swift
rust/packet_engine/: Cargo.toml  build.rs  cbindgen.toml
rust/packet_engine/src/: constants.rs  dns.rs  dns_filter.rs  domain.rs  ech_correlator.rs  engine.rs  errors.rs  ip.rs  lib.rs  site_mapper.rs  storage.rs  tcp_reassembly.rs  threat_feed.rs  threat_matcher.rs  tls.rs
scripts/: build-rust.sh  build-universal.sh  generate-jwt-keys.sh
tests/: run-lab.sh
(+112 files in other folders)
